crates/mehen-sql/tests/snapshots/fixtures_snapshot__dialect_directive.snap
---
source: crates/mehen-sql/tests/fixtures_snapshot.rs
expression: "serde_json :: json!\n({\n    \"backend\" : analysis.backend.label(), \"diagnostics\" :\n    analysis.diagnostics.iter().map(| d | d.code.clone()).collect :: < Vec < _\n    >> (), \"metrics\" : & analysis.root.metrics, \"spaces\" :\n    analysis.root.spaces.iter().map(| s | serde_json :: json!\n    ({\n        \"kind\" : s.kind.as_str(), \"name\" : s.name, \"start_line\" :\n        s.span.start_line, \"end_line\" : s.span.end_line,\n    })).collect :: < Vec < _ >> (),\n})"
---
{
  "backend": "sqruff",
  "diagnostics": [
    "sql.unparsable"
  ],
  "metrics": {
    "sql.aggregate.distinct_count": 0,
    "sql.aggregate.function_count": 0,
    "sql.alias.table_alias_count": 0,
    "sql.case.count": 0,
    "sql.case.max_depth": 0,
    "sql.case.max_when_count": 0,
    "sql.case.missing_else_count": 0,
    "sql.case.when_count": 0,
    "sql.cast.count": 0,
    "sql.change_risk_score": 1.0,
    "sql.cognitive_complexity": 1.0,
    "sql.cte.count": 0,
    "sql.cte.dependency_edges": 0,
    "sql.cte.max_dependency_depth": 0,
    "sql.cte.max_fan_out": 0,
    "sql.cte.recursive_count": 0,
    "sql.cte.trivial_count": 0,
    "sql.cte.unused_count": 0,
    "sql.dcl.grant_revoke_count": 0,
    "sql.ddl.alter_count": 0,
    "sql.ddl.create_count": 0,
    "sql.ddl.create_or_replace_count": 0,
    "sql.ddl.drop_count": 0,
    "sql.ddl.truncate_count": 0,
    "sql.derived_table.count": 0,
    "sql.dialect.confidence": 1.0,
    "sql.dialect.conflict_count": 1,
    "sql.dialect.directive_present": 1,
    "sql.dialect.is_postgres": 1,
    "sql.dialect.requested": 0,
    "sql.dml.delete_count": 0,
    "sql.dml.delete_without_where_count": 0,
    "sql.dml.insert_count": 0,
    "sql.dml.merge_count": 0,
    "sql.dml.returning_count": 0,
    "sql.dml.update_count": 0,
    "sql.dml.update_without_where_count": 0,
    "sql.expression.max_depth": 2,
    "sql.function.call_count": 1,
    "sql.function.distinct_count": 1,
    "sql.function.nested_call_depth": 1,
    "sql.group_by.count": 0,
    "sql.group_by.cube_count": 0,
    "sql.group_by.grouping_sets_count": 0,
    "sql.group_by.rollup_count": 0,
    "sql.halstead.difficulty": 4.5,
    "sql.halstead.distinct_operands": 5,
    "sql.halstead.distinct_operators": 9,
    "sql.halstead.effort": 239.86336008962905,
    "sql.halstead.length": 14.0,
    "sql.halstead.total_operands": 5,
    "sql.halstead.total_operators": 9,
    "sql.halstead.vocabulary": 14.0,
    "sql.halstead.volume": 53.302968908806456,
    "sql.having.count": 0,
    "sql.identifier.quoted_count": 0,
    "sql.identifier.unqualified_column_ratio": 0.0,
    "sql.join.count": 0,
    "sql.join.cross_count": 0,
    "sql.join.kind_count.cross": 0,
    "sql.join.kind_count.full": 0,
    "sql.join.kind_count.inner": 0,
    "sql.join.kind_count.lateral": 0,
    "sql.join.kind_count.left": 0,
    "sql.join.kind_count.natural": 0,
    "sql.join.kind_count.right": 0,
    "sql.join.missing_condition_count": 0,
    "sql.join.natural_count": 0,
    "sql.join.non_equi_count": 0,
    "sql.join.outer_count": 0,
    "sql.loc.avg_statement_lines": 3.0,
    "sql.loc.blank": 0,
    "sql.loc.code": 4,
    "sql.loc.comment": 2,
    "sql.loc.comment_density": 0.3333333333333333,
    "sql.loc.logical": 1,
    "sql.loc.max_statement_lines": 3,
    "sql.loc.physical": 6,
    "sql.maintainability_index": 97.42272227795463,
    "sql.modularity_health": 0.0,
    "sql.object.read_count": 1,
    "sql.object.touch_count": 1,
    "sql.object.write_count": 0,
    "sql.parser.diagnostic_count": 1,
    "sql.parser.unparsable_line_count": 1,
    "sql.parser.unparsable_ratio": 0.25,
    "sql.parser.unparsable_segment_count": 1,
    "sql.predicate.boolean_operator_count": 0,
    "sql.predicate.comparison_count": 1,
    "sql.predicate.max_boolean_depth": 0,
    "sql.predicate.not_count": 0,
    "sql.predicate.null_semantics_risk_count": 0,
    "sql.procedural.block_count": 0,
    "sql.procedural.case_statement_count": 0,
    "sql.procedural.cognitive_complexity": 0.0,
    "sql.procedural.cyclomatic_complexity": 0.0,
    "sql.procedural.dynamic_sql_count": 0,
    "sql.procedural.exception_handler_count": 0,
    "sql.procedural.if_count": 0,
    "sql.procedural.loop_count": 0,
    "sql.procedural.max_block_depth": 0,
    "sql.procedural.raise_throw_count": 0,
    "sql.procedural.return_count": 0,
    "sql.procedural.routine_count": 0,
    "sql.query_block.avg_select_items": 2.0,
    "sql.query_block.count": 1,
    "sql.query_block.max_depth": 1,
    "sql.query_block.max_select_items": 2,
    "sql.relation.ref_count": 1,
    "sql.review_burden_index": 2.039409710647091,
    "sql.select.expression_without_alias_count": 0,
    "sql.select.outer_star_count": 0,
    "sql.select.output_alias_coverage": 1.0,
    "sql.select.star_count": 0,
    "sql.set_op.count": 0,
    "sql.set_op.kind_count.except": 0,
    "sql.set_op.kind_count.intersect": 0,
    "sql.set_op.kind_count.union": 0,
    "sql.set_op.kind_count.union_all": 0,
    "sql.set_op.union_all_ratio": 0.0,
    "sql.statement.count": 1,
    "sql.statement.kind_count.alter_table": 0,
    "sql.statement.kind_count.anonymous_block": 0,
    "sql.statement.kind_count.create_other": 0,
    "sql.statement.kind_count.create_table": 0,
    "sql.statement.kind_count.create_table_as": 0,
    "sql.statement.kind_count.create_view": 0,
    "sql.statement.kind_count.delete": 0,
    "sql.statement.kind_count.drop": 0,
    "sql.statement.kind_count.explain": 0,
    "sql.statement.kind_count.grant": 0,
    "sql.statement.kind_count.insert": 0,
    "sql.statement.kind_count.merge": 0,
    "sql.statement.kind_count.procedural": 0,
    "sql.statement.kind_count.revoke": 0,
    "sql.statement.kind_count.select": 1,
    "sql.statement.kind_count.set_operation": 0,
    "sql.statement.kind_count.transaction_control": 0,
    "sql.statement.kind_count.truncate": 0,
    "sql.statement.kind_count.unknown": 0,
    "sql.statement.kind_count.update": 0,
    "sql.statement.kind_count.with_select": 0,
    "sql.statement.kind_distinct": 1,
    "sql.statement.kind_entropy": 0.0,
    "sql.statement.unparsed_count": 0,
    "sql.structural_complexity": 2.0,
    "sql.structural_complexity.max_embedded_query": 0.0,
    "sql.subquery.correlated_count": 0,
    "sql.subquery.count": 0,
    "sql.subquery.exists_count": 0,
    "sql.subquery.in_count": 0,
    "sql.subquery.max_depth": 0,
    "sql.subquery.scalar_count": 0,
    "sql.transaction.control_count": 0,
    "sql.window.frame_count": 0,
    "sql.window.function_count": 0,
    "sql.window.order_expression_count": 0,
    "sql.window.partition_expression_count": 0
  },
  "spaces": [
    {
      "end_line": 5,
      "kind": "sql.statement",
      "name": "select",
      "start_line": 3
    }
  ]
}
